k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    

    spec:
      containers:
        - name: frontend-container
          image: jaydipaws/clean-blog-app:latest

          volumeMounts:
            - name: blog-storage
              mountPath: /usr/share/nginx/html/data


          ports:
            - containerPort: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

        
      volumes:
        - name: blog-storage
          persistentVolumeClaim: 
            claimName: blog-pvc
