k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: db

spec:
  serviceName: "db-service"   # Required (headless service)

  replicas: 2

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: db
          image: nginx   # demo only
          ports:
            - containerPort: 80

  volumeClaimTemplates:
    - metadata:
        name: db-storage

      spec:
        accessModes: ["ReadWriteOnce"]

        resources:
          requests:
            storage: 1Gi
